apps/whoami/debug-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: debug-header-local
  namespace: whoami
spec:
  headers:
    customRequestHeaders:
      X-Debug-Traefik: "active-locally"
