apps/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`whoami.valab.top`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: tinyauth-protect
          namespace: security
        - name: debug-header-local
